# tcglookup-rs

./: Cargo.toml  README.md
examples/: search.rs
src/: client.rs  error.rs  lib.rs  types.rs
src/resources/: cards.rs  games.rs  mod.rs  sets.rs
